--- a/app/src/main/res/layout/activity_data_mining.xml
+++ b/app/src/main/res/layout/activity_data_mining.xml
@@ -101,6 +101,19 @@
             android:textColor="#fff"
             android:transitionName="button_trans" />
 
+        <Button
+            android:id="@+id/regression"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:background="#000"
+            android:text="Regression"
+            android:onClick="callRegressionActivity"
+            android:fontFamily="@font/muli_black"
+            android:textColor="#fff"
+            android:transitionName="button_trans" />
+
     </LinearLayout>
 
 
